@@ -2,11 +2,15 @@ package uk.gov.hmcts.reform.fpl.service.cmo;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome;
+import uk.gov.hmcts.reform.fpl.enums.CMOStatus;
 import uk.gov.hmcts.reform.fpl.enums.HearingType;
 import uk.gov.hmcts.reform.fpl.enums.State;
 import uk.gov.hmcts.reform.fpl.exceptions.CMONotFoundException;
+import uk.gov.hmcts.reform.fpl.exceptions.HearingOrdersBundleNotFoundException;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.ConfidentialOrderBundle;
 import uk.gov.hmcts.reform.fpl.model.HearingBooking;
@@ -14,10 +18,12 @@ import uk.gov.hmcts.reform.fpl.model.Other;
 import uk.gov.hmcts.reform.fpl.model.ReviewDecision;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
+import uk.gov.hmcts.reform.fpl.model.event.ReviewDraftOrdersData;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrder;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrdersBundle;
 import uk.gov.hmcts.reform.fpl.model.order.HearingOrdersBundles;
 import uk.gov.hmcts.reform.fpl.model.order.generated.GeneratedOrder;
+import uk.gov.hmcts.reform.fpl.service.JudicialService;
 import uk.gov.hmcts.reform.fpl.service.OthersService;
 import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 
@@ -28,20 +34,24 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
+import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.JUDGE_REQUESTED_CHANGES;
 import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.REVIEW_LATER;
 import static uk.gov.hmcts.reform.fpl.enums.CMOReviewOutcome.SEND_TO_ALL_PARTIES;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SEND_TO_JUDGE;
+import static uk.gov.hmcts.reform.fpl.enums.JudgeType.FEE_PAID_JUDGE;
+import static uk.gov.hmcts.reform.fpl.enums.JudgeType.LEGAL_ADVISOR;
 import static uk.gov.hmcts.reform.fpl.enums.YesNo.NO;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.asDynamicList;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.unwrapElements;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class ApproveDraftOrdersService {
@@ -54,12 +64,14 @@ public class ApproveDraftOrdersService {
     private final BlankOrderGenerator blankOrderGenerator;
     private final HearingOrderGenerator hearingOrderGenerator;
     private final OthersService othersService;
+    private final JudicialService judicialService;
 
     private static final String ORDER_BUNDLES_DRAFT = "hearingOrdersBundlesDrafts";
     private static final String REVIEW_DECISION = "reviewDecision";
     private static final String ORDERS_TO_BE_SENT = "ordersToBeSent";
     private static final String NUM_DRAFT_CMOS = "numDraftCMOs";
     private static final String REFUSED_ORDERS = "refusedHearingOrders";
+    private static final String DRAFT_ORDERS_REMOVED = "draftOrdersRemoved";
 
     /**
      * That methods shouldn't be invoked without any cmo selected as the outcome is unexpected.
@@ -184,25 +196,26 @@ public class ApproveDraftOrdersService {
             if (cmoReviewDecision != null && cmoReviewDecision.getDecision() != null
                 && !REVIEW_LATER.equals(cmoReviewDecision.getDecision())) {
 
-                Element<HearingOrder> reviewedOrder;
+                Element<HearingOrder> reviewedOrder = null;
 
-                if (!JUDGE_REQUESTED_CHANGES.equals(cmoReviewDecision.getDecision())) {
+                if (cmoReviewDecision.hasBeenApproved()) {
                     List<Element<Other>> selectedOthers = othersService.getSelectedOthers(caseData.getOthersV2(),
                         caseData.getOthersSelector(), NO.getValue());
 
                     reviewedOrder = hearingOrderGenerator.buildSealedHearingOrder(
-                        cmoReviewDecision, cmo, selectedOthers, getOthersNotified(selectedOthers),
-                        caseData.getSealType(),
-                        caseData.getCourt()
-                    );
+                        caseData, cmoReviewDecision, cmo, selectedOthers, getOthersNotified(selectedOthers),
+                        false);
 
                     List<Element<HearingOrder>> sealedCMOs = caseData.getSealedCMOs();
                     sealedCMOs.add(reviewedOrder);
                     data.put("sealedCMOs", sealedCMOs);
                     data.put("state", getStateBasedOnNextHearing(caseData, cmoReviewDecision, reviewedOrder.getId()));
-                } else {
+                } else if (JUDGE_REQUESTED_CHANGES.equals(cmoReviewDecision.getDecision())) {
                     reviewedOrder = hearingOrderGenerator.buildRejectedHearingOrder(
                         cmo, cmoReviewDecision.getChangesRequestedByJudge());
+                } else {
+                    log.info("Draft CMO is removed by Judge");
+                    data.putAll(removeDraftOrders(caseData, List.of(cmo)));
                 }
 
                 caseData.getDraftUploadedCMOs().remove(cmo);
@@ -214,7 +227,11 @@ public class ApproveDraftOrdersService {
                 data.put(ORDER_BUNDLES_DRAFT, hearingOrdersBundles.getAgreedCmos());
                 data.put("hearingOrdersBundlesDraftReview", hearingOrdersBundles.getDraftCmos());
 
-                data.put(ORDERS_TO_BE_SENT, newArrayList(reviewedOrder));
+                if (reviewedOrder != null) {
+                    data.put(ORDERS_TO_BE_SENT, newArrayList(reviewedOrder));
+                } else {
+                    data.remove(ORDERS_TO_BE_SENT);
+                }
             }
         }
         return data;
@@ -224,6 +241,15 @@ public class ApproveDraftOrdersService {
         return caseData.getDraftUploadedCMOs().stream()
             .filter(cmo -> cmo.getValue().getStatus().equals(SEND_TO_JUDGE))
             .collect(toList());
+    }
+
+    public Optional<UUID> getSelectedHearingDraftOrderId(CaseData caseData) {
+        try {
+            return Optional.ofNullable(draftOrdersBundleHearingSelector.getSelectedHearingDraftOrdersBundle(caseData)
+                .getValue().getHearingId());
+        } catch (HearingOrdersBundleNotFoundException e) {
+            return Optional.empty();
+        }
     }
 
     public Element<HearingOrdersBundle> getSelectedHearingDraftOrdersBundle(CaseData caseData) {
@@ -242,32 +268,32 @@ public class ApproveDraftOrdersService {
     @SuppressWarnings("unchecked")
     public void reviewC21Orders(CaseData caseData, Map<String, Object> data,
                                 Element<HearingOrdersBundle> selectedOrdersBundle) {
-        List<Element<HearingOrder>> draftOrders = Stream.of(selectedOrdersBundle.getValue().getOrders(),
-                selectedOrdersBundle.getValue().getAllConfidentialOrders()).flatMap(List::stream)
-            .filter(order -> !order.getValue().getType().isCmo()).collect(toList());
+        List<Element<HearingOrder>> draftOrders = selectedOrdersBundle.getValue()
+            .getAllOrdersAndConfidentialOrders().stream()
+            .filter(order -> !order.getValue().getType().isCmo()).toList();
 
         List<Element<HearingOrder>> ordersToBeSent = defaultIfNull((
             List<Element<HearingOrder>>) data.get(ORDERS_TO_BE_SENT), newArrayList());
 
         int counter = 1;
         List<Element<GeneratedOrder>> orderCollection = caseData.getOrderCollection();
+        List<Element<HearingOrder>> draftOrdersToBeRemoved = newArrayList();
 
         for (Element<HearingOrder> orderElement : draftOrders) {
-            Map<String, Object> reviewDecisionMap = (Map<String, Object>) data.get(REVIEW_DECISION + counter);
-            ReviewDecision reviewDecision = mapper.convertValue(reviewDecisionMap, ReviewDecision.class);
+            ReviewDecision reviewDecision = caseData.getReviewDraftOrdersData().getReviewDecision(counter);
 
             if (reviewDecision != null && reviewDecision.getDecision() != null
                 && !REVIEW_LATER.equals(reviewDecision.getDecision())) {
                 Element<HearingOrder> reviewedOrder;
 
-                if (!JUDGE_REQUESTED_CHANGES.equals(reviewDecision.getDecision())) {
+                if (reviewDecision.hasBeenApproved()) {
                     List<Element<Other>> selectedOthers = othersService.getSelectedOthers(caseData.getOthersV2(),
                         caseData.getOthersSelector(), NO.getValue());
 
                     reviewedOrder = hearingOrderGenerator.buildSealedHearingOrder(
-                        reviewDecision, orderElement, selectedOthers, getOthersNotified(selectedOthers),
-                        caseData.getSealType(),
-                        caseData.getCourt());
+                        caseData, reviewDecision, orderElement, selectedOthers, getOthersNotified(selectedOthers),
+                        selectedOrdersBundle.getValue().getHearingId() != null ? false :
+                            SEND_TO_ALL_PARTIES.equals(reviewDecision.getDecision()));
 
                     Element<GeneratedOrder> generatedBlankOrder = blankOrderGenerator.buildBlankOrder(caseData,
                         selectedOrdersBundle, reviewedOrder, selectedOthers, getOthersNotified(selectedOthers));
@@ -280,17 +306,25 @@ public class ApproveDraftOrdersService {
                     }
                     ordersToBeSent.add(reviewedOrder);
 
-                } else {
+                } else if (JUDGE_REQUESTED_CHANGES.equals(reviewDecision.getDecision())) {
                     Element<HearingOrder> rejectedOrder = hearingOrderGenerator.buildRejectedHearingOrder(
                         orderElement, reviewDecision.getChangesRequestedByJudge());
 
                     if (orderElement.getValue().isConfidentialOrder()) {
+                        Element<HearingOrder> confidentialRejectedOrder =
+                            element(rejectedOrder.getId(),
+                                rejectedOrder.getValue().toBuilder()
+                                .orderConfidential(null)
+                                .build());
                         data.putAll(addToConfidentialOrderBundle(selectedOrdersBundle, orderElement,
-                            caseData.getConfidentialRefusedOrders(), rejectedOrder));
+                            caseData.getConfidentialRefusedOrders(), confidentialRejectedOrder));
                     }
 
                     ordersToBeSent.add(rejectedOrder);
+                } else {
+                    draftOrdersToBeRemoved.add(orderElement);
                 }
+
                 selectedOrdersBundle.getValue().removeOrderElement(orderElement);
             }
             counter++;
@@ -302,6 +336,7 @@ public class ApproveDraftOrdersService {
             data.put(ORDERS_TO_BE_SENT, ordersToBeSent);
         }
 
+        data.putAll(removeDraftOrders(caseData, draftOrdersToBeRemoved));
         data.putAll(updateHearingDraftOrdersBundle(caseData, selectedOrdersBundle));
         data.put("orderCollection", orderCollection);
     }
@@ -397,5 +432,73 @@ public class ApproveDraftOrdersService {
                     .hasAddressAdded())
                 .map(other -> other.getValue().getFullName()).collect(Collectors.joining(", "))
         ).orElse(null);
+    }
+
+    public String getJudgeTitleAndNameOfCurrentUser(CaseData caseData) {
+        if (LEGAL_ADVISOR.equals(caseData.getAllocateJudgeEventData().getJudgeType())) {
+            return caseData.getAllocateJudgeEventData().getManualJudgeDetails().getJudgeFullName();
+        } else {
+            return judicialService.getJudgeTitleAndNameOfCurrentUser(
+                (FEE_PAID_JUDGE.equals(caseData.getAllocateJudgeEventData().getJudgeType()))
+                    ? caseData.getAllocateJudgeEventData().getFeePaidJudgeTitle() : null);
+        }
+    }
+
+    public Map<String, Object> previewOrderWithCoverSheet(CaseData caseData) {
+        final HearingOrdersBundle orderBundles = getSelectedHearingDraftOrdersBundle(caseData).getValue();
+        final List<Element<HearingOrder>> draftOrders = orderBundles.getAllOrdersAndConfidentialOrders().stream()
+            .filter(order -> !order.getValue().getType().isCmo())
+            .toList();
+
+        final ReviewDraftOrdersData reviewDraftOrdersData = caseData.getReviewDraftOrdersData();
+
+        Map<String, Object> data = new HashMap<>();
+        // Filter out the orders that have been approved by Judge without amendments
+        int labelCounter = 1;
+        for (int i = 0; i <  draftOrders.size(); i++) {
+            ReviewDecision reviewDecision = reviewDraftOrdersData.getReviewDecision(i + 1);
+            if (reviewDecision != null && CMOReviewOutcome.SEND_TO_ALL_PARTIES.equals(reviewDecision.getDecision())) {
+                Element<HearingOrder> orderElement = draftOrders.get(i);
+                HearingOrder approvedOrder = draftOrders.get(i).getValue();
+
+                if (orderBundles.getHearingId() == null) {
+                    data.put("previewApprovedOrder" + labelCounter,
+                        hearingOrderGenerator.addCoverSheet(caseData, (approvedOrder.isConfidentialOrder()
+                            ? approvedOrder.getOrderConfidential() : approvedOrder.getOrder())));
+                }
+                data.put("previewApprovedOrderTitle" + labelCounter,
+                    String.format("Order %d %s", (i + 1), approvedOrder.getTitle()));
+                labelCounter++;
+            }
+        }
+        return data;
+    }
+
+    private Map<String, Object> removeDraftOrders(CaseData caseData,
+                                                  List<Element<HearingOrder>> draftOrdersToBeRemoved) {
+        List<Element<HearingOrder>> draftOrdersRemoved = defaultIfNull(caseData.getDraftOrdersRemoved(),
+            newArrayList());
+
+        if (!isEmpty(draftOrdersToBeRemoved)) {
+            draftOrdersRemoved.addAll(
+                draftOrdersToBeRemoved.stream()
+                    .map(element ->
+                        element(element.getId(), element.getValue().toBuilder()
+                            .order(null)
+                            .orderConfidential(null)
+                            .orderRemoved(element.getValue().getOrderOrOrderConfidential())
+                            .status(CMOStatus.REMOVED)
+                            .removalReason("The draft order is not required and should be removed")
+                            .build()))
+                    .toList());
+        }
+
+        if (!isEmpty(draftOrdersRemoved)) {
+            caseData.setDraftOrdersRemoved(draftOrdersRemoved);
+            return Map.of(DRAFT_ORDERS_REMOVED, draftOrdersRemoved);
+        } else {
+            caseData.setDraftOrdersRemoved(null);
+            return Map.of();
+        }
     }
 }
